<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recipeDetName"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/recipe_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeDetDescription"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/recipes_description"
        android:singleLine="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeDetName" />

    <Button
        android:id="@+id/delete_rep"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/remove_btn"
        android:text="@string/remove"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeDetDescription"
        app:layout_optimizationLevel="chains" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/cancel_btn"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cancel"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_rep"
        app:layout_constraintTop_toBottomOf="@id/recipeDetDescription"
        app:layout_constraintTop_toTopOf="@id/delete_rep"
        app:layout_optimizationLevel="chains" />

    <Button
        android:id="@+id/use_products"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/product_add"
        android:gravity="center_horizontal|center_vertical"
        android:text="Use products"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel" />

    <TextView
        android:id="@+id/actual_product"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:minHeight="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/use_products"
        android:hint="@string/you_have_this"
        android:gravity="center"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/not_have_product"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/you_need_this_too"
        android:minHeight="80dp"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actual_product" />

</androidx.constraintlayout.widget.ConstraintLayout>