<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/recipeName"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="Recipe title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recipeDescription"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="Recipes description"
        android:singleLine="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/recipeName" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/add_product_button"
        android:text="@string/save"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeDescription"
        app:layout_optimizationLevel="chains" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/cancel_btn"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/cancel"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_btn"
        app:layout_constraintTop_toBottomOf="@id/recipeDescription"
        app:layout_constraintTop_toTopOf="@id/save_btn"
        app:layout_optimizationLevel="chains" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_recycler"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:minHeight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel" />

    <EditText
        android:id="@+id/ingredient"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/add_ingredient"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/addIngredient"
        app:layout_constraintEnd_toStartOf="@+id/ingredient_amount"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ingredient_amount"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/amount"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/addIngredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingredient" />

    <Button
        android:id="@+id/addIngredient"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/add_product_button"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/add_ingredient"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>